# gemini-fullstack-langgraph-quickstart

backend/: langgraph.json  pyproject.toml
backend/src/agent/: __init__.py  agent1.py  app.py  baseagent.py  configuration.py  graph.py  local_rag_agent.py
backend/src/config/: __init__.py  configuration.py
backend/src/graph_module/community/detector/: base.py  leiden.py  sllpa.py
backend/src/graph_module/community/summary/: base.py  leiden.py  sllpa.py
backend/src/graph_module/config/: neo4jdb.py
backend/src/graph_module/graph/: __init__.py
backend/src/graph_module/graph/core/: base_indexer.py  graph_connection.py
backend/src/graph_module/graph/extraction/: entity_extractor.py  graph_writer.py
backend/src/graph_module/graph/indexing/: chunk_indexer.py  embedding_manager.py  entity_indexer.py
backend/src/graph_module/graph/processing/: entity_merger.py  similar_entity.py
backend/src/graph_module/graph/structure/: struct_builder.py
backend/src/graph_module/model/: get_models.py
backend/src/graph_module/processor/: document_processor.py  file_reader.py
backend/src/models/: __init__.py  model_adapter.py
backend/src/prompts/: __init__.py  prompts.py
backend/src/schemas/: __init__.py  tools_and_schemas.py
backend/src/state/: __init__.py  state.py
backend/src/tools/: __init__.py  utils.py
frontend/src/: App.tsx  global.css
frontend/src/components/: InputForm.tsx
