[project]
name = "agent"
version = "0.0.1"
description = "Backend for the LangGraph agent"
authors = [
    { name = "Philipp Schmid", email = "schmidphilipp1995@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain>=0.3.19",
    "langchain-google-genai",
    "python-dotenv>=1.0.1",
    "langgraph-sdk>=0.1.57",
    "langgraph-cli",
    "langgraph-api",
    "fastapi",
    "google-genai",
    # 以下为 graph_module 相关依赖
    "hanlp==2.1.1", # graph_module
    "PyPDF2>=3.0.0", # graph_module
    "python-docx>=0.8.11", # graph_module
    "chardet==3.0.4", # graph_module
    "textract==1.6.3", # graph_module
    "graphdatascience==1.12", # graph_module
    "langchain_community==0.3.20", # graph_module
    "langchain_core==0.3.46", # graph_module
    "langchain_neo4j==0.4.0", # graph_module
    "langchain_openai==0.3.9", # graph_module
    "rich==13.9.4", # graph_module
    "pandas==2.2.3", # graph_module
    "neo4j", # graph_module
    "pyyaml>=6.0", # graph_module
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
]
